1800 13MAY2021 event listener error

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>PSC </title>
-    <link href="./css/reset.css" type="text/css" rel="stylesheet"/>
+
     <link href="./css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
@@ -16,6 +16,7 @@
           <li>ESTABLISHED: 1944</li>
           <li>CREATOR: Grandma Russert</li>
           <li>More To Follow on a Later Date!</li>
+          <img src="https://live.staticflickr.com/4110/4832775634_96580bca88_b.jpg">
         </ul>
       </section>
       <section>
@@ -25,6 +26,9 @@
             <legend>Sales Information</legend>
             <label>Location
               <input name="location" type="text"/>
+            </label>
+            <label>Photo
+              <input name="photo" type="text"/>
             </label>
             <label>Minimum Customer Per Hour:
               <input name="minCustomerPerHour" type="text" />
